<resources>
    <string name="app_name">AndroidDemo</string>
    <string name="Tween">补间动画</string>
    <string name="Property">属性动画</string>
    <string name="Inner_file_storage">内部文件存储</string>
    <string name="Exteral_file_storage">外部文件存储</string>
    <string name="Database_storage">数据库存储</string>
    <string name="Database_contentProvider">CONTENT PROVIDER</string>
    <string name="Create_db">Create DB</string>
    <string name="Update_db">Update DB</string>
    <string name="Insert">Insert</string>
    <string name="Update">Update</string>
    <string name="Delete">Delete</string>
    <string name="Query">Query</string>
    <string name="Test_transaction">Test Transaction</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="start">start</string>
    <string name="end">end</string>

    <string name="current_click_count">点击次数：%d</string>
    <string name="test_room">Test Room</string>
    <string name="change_view">改变view</string>
</resources>