<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/create_db"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/btn_background"
        android:focusable="true"
        android:padding="10dp"
        android:text="@string/Create_db"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/update_db"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_background"
        android:focusable="true"
        android:padding="10dp"
        android:text="@string/Update_db"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/insert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_background"
        android:focusable="true"
        android:padding="10dp"
        android:text="@string/Insert"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_background"
        android:focusable="true"
        android:padding="10dp"
        android:text="@string/Update"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_background"
        android:focusable="true"
        android:padding="10dp"
        android:text="@string/Delete"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/query"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_background"
        android:focusable="true"
        android:padding="10dp"
        android:text="@string/Query"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/test_transaction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_background"
        android:focusable="true"
        android:padding="10dp"
        android:text="@string/Test_transaction"
        android:textSize="20sp" />

</LinearLayout>